# go

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: board.cpp.35BBD147FE35AC75.idx  board.hpp.25BE376A15AEA2AB.idx  controller.cpp.F70AD133BF86D4BB.idx  controller.hpp.7B9FC440B16B6F34.idx  game.cpp.6546DF7D88BDA632.idx  game.hpp.971ACE9C46E010FC.idx  main.cpp.2738CAB0C1A9C897.idx  player.cpp.CDC4AB9D096E1FB9.idx  player.hpp.FF7C5AF39319C8DA.idx
include/: board.hpp  circle.hpp  controller.hpp  game.hpp  player.hpp  result.hpp  ui.hpp
src/: board.cpp  circle.cpp  controller.cpp  game.cpp  main.cpp  player.cpp  result.cpp  ui.cpp
